# -llama-3-elyza-jp-8b-ft-skud

./: README.md  hello.py  pdf2md  pyproject.toml  requirements.txt  run_rag.py
