[project]
name = "llama-3-elyza-jp-8b-ft-skud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.10"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=3.2.0",
    "pdfplumber>=0.11.4",
    "peft>=0.14.0",
    "pypdf>=5.1.0",
    "torch>=2.5.1",
    "transformers>=4.47.1",
]
